Add Permission for HDMI bridge driver
Add Permission for HDMI bridge driver

Change-Id: I6402686d44e7349dbc313f8b53071a7aed5a1d16

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -135,6 +135,7 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/cvp*                 0660   system     camera
 /dev/media*               0660   system     camera
 /dev/v4l-subdev*          0660   system     camera
+/dev/hdmi_bdg_irq_handler 0660   system     camera
 /dev/qseecom              0660   system     drmrpc
 /dev/qce                  0660   system     drmrpc
 /dev/smcinvoke            0660   system     drmrpc
